test/errhandling/lydia/notAnErrorSubtype-rethrown2.good
notAnErrorSubtype-rethrown2.chpl:5: In function 'main':
notAnErrorSubtype-rethrown2.chpl:7: error: cannot throw something that is not a subtype of Error
